--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"> 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+
 
   <!-- Normalize -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -23,7 +25,7 @@
     <nav class="header-nav">
       <a class="logo header-logo" href="/index.html">Web<span class="logo-part">Studio</span></a>
       <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+        <li class="nav-item"><a class="nav-link current" href="./index.html">Studio</a></li>
         <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
         <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
       </ul>
