update: HTML+CSS + add images

--- a/index.html
+++ b/index.html
@@ -41,127 +41,310 @@
 </header>
 
 <main>
-  <!-- HERO -->
-  <section class="banner">
-    <div class="container">
-    <h1 class="main-title">Effective Solutions for Your Business</h1>
-    <button type="button" class="hero-btn">Order Service</button>
+  <!-- slogan -->
+  <section class="page-section-one section">
+    <div class="container container-section-one">
+    <h1 class="slogan-title">Effective Solutions for Your Business</h1>
+    <button type="button" class="button">Order Service</button>
     </div>
   </section>
 
   <!-- FEATURES -->
-  <section class="features">
+  <section class="section">
     <div class="container">
-    <h2 class="visually-hidden">Our features</h2>
-    <ul class="features-list">
-      <li class="features-item">
-        <h3 class="features-title">Strategy</h3>
-        <p class="features-text">Our goal is to identify the business problem and deliver a creative solution.</p>
+    <h2 class="advanteges-list visually-hidden">Our features</h2>
+    <ul class="card-set">
+      <li class="card-set-item">
+        <div class="advanteges-list-icons-conteiner">
+          <svg class="" width="64" height="64">
+            <use href="images/Icon 1.jpg"></use>
+          </svg>
+        </div>
+        <h3 class="advanteges-list">Strategy</h3>
+        <p class="advanteges-list-description">Our goal is to identify the business problem and deliver a creative solution.</p>
+      </li>
+      <li class="card-set-item">
+        <div class="advanteges-list-description">
+          <svg class="64" width="64" height="64">
+            <use href="./images/Icon 2.jpg"></use>
+          </svg>
+        </div>
+        <h3 class="advanteges-list">Punctuality</h3>
+        <p class="advanteges-list-description">We deliver the key message on time and within budget.</p>
+      </li>
+      <li class="card-set-item">
+        <div class="advanteges-list-icons-conteiner">
+          <svg class="" width="64" height="64">
+            <use href="./images/Icon 3.jpg"></use>
+          </svg>
+        </div>
+        <h3 class="advanteges-list">Diligence</h3>
+        <p class="advanteges-list-description">We validate growth opportunities while minimizing risk.</p>
       </li>
       <li class="features-item">
-        <h3 class="features-title">Punctuality</h3>
-        <p class="features-text">We deliver the key message on time and within budget.</p>
-      </li>
-      <li class="features-item">
-        <h3 class="features-title">Diligence</h3>
-        <p class="features-text">We validate growth opportunities while minimizing risk.</p>
-      </li>
-      <li class="features-item">
-        <h3 class="features-title">Technologies</h3>
-        <p class="features-text">We craft modern, accessible digital experiences.</p>
+        <div class="advanteges-list-icons-conteiner">
+          <svg class="" width="64" height="64">
+            <use href="./images/Icon 4.jpg"></use>
+          </svg>
+        </div>
+        <h3 class="advanteges-list">Technologies</h3>
+        <p class="advanteges-list-description">We craft modern, accessible digital experiences.</p>
       </li>
     </ul>
     </div>
   </section>
 
   <!-- TEAM -->
-  <section class="team">
+  <section class="pege-team section">
     <div class="container">
-    <h2 class="section-title">Our Team</h2>
+    <h2 class="our-team-title">Our Team</h2>
 
-    <ul class="team-list">
-      <li class="team-card">
-        <img class="team-photo" src="./images/person1.jpg" alt="Mark Guerrero — Product Designer" width="264" height="260">
-        <div class="team-info">
-        <h3 class="card-title">Mark Guerrero</h3>
-        <p class="card-text">Product Designer</p>
-        </div>
+    <ul class="card-set-item">
+      <li class="our-team-list">
+        <img src="./images/person1.jpg" alt="Mark Guerrero — Product Designer" width="264" height="260">
+        <div class="text-container-team">
+        <h3 class="our-team-list-name">Mark Guerrero</h3>
+        <p class="our-team-list-description">Product Designer</p>
+        <ul class="items-social-networks">
+        <li class="icons-conteiner">
+          <a href="" class="icons-social-networks">
+             <svg class="svg-icons" width="16" height="16">
+              <use href="./images/instagram .jpg"></use>
+             </svg>
+          </a>
+        </li>
       </li>
-      <li class="team-card">
-        <img class="team-photo" src="./images/person2.jpg" alt="Tom Ford — Frontend Developer" width="264" height="260">
-        <div class="team-info">
-        <h3 class="card-title">Tom Ford</h3>
-        <p class="card-text">Frontend Developer</p>
-        </div>
+      <li class="icons-conteiner">
+        <a href="" class="icons-social-networks">
+            <svg class="svg-icons" width="16" height="16">
+              <use href="./images/twitter .jpg"></use>
+            </svg>
+        </a>
       </li>
-      <li class="team-card">
-        <img class="team-photo" src="./images/person3.jpg" alt="Camila Garcia — Marketing" width="264" height="260">
-         <div class="team-info">
-        <h3 class="card-title">Camila Garcia</h3>
-        <p class="card-text">Marketing</p>
-         </div>
+      <li class="icons-conteiner">
+         <a href="" class="icons-social-networks">
+            <svg class="svg-icons" width="16" height="16">
+              <use href="./images/facebook .jpg"></use>
+            </svg>
+         </a>
       </li>
-      <li class="team-card">
-        <img class="team-photo" src="./images/person4.jpg" alt="Daniel Wilson — UI Designer" width="264" height="260">
-         <div class="team-info">
-        <h3 class="card-title">Daniel Wilson</h3>
-        <p class="card-text">UI Designer</p>
-         </div>
+      <li class="icons-conteiner">
+        <a href="" class="icons-social-networks">
+          <svg class="svg-icons" width="16" height="16">
+            <use href="./images/linkedin .jpg"></use>
+          </svg>
+        </a>
       </li>
     </ul>
+    </div>
+  </li>
+      <li class="our-team-list">
+        <img src="./images/person2.jpg" alt="Tom Ford — Frontend Developer" width="264" height="260">
+        <div class="text-container-team">
+        <h3 class="our-team-list-name">Tom Ford</h3>
+        <p class="our-team-list-description">Frontend Developer</p>
+        <ul class="items-social-networks">
+          <li class="icons-conteiner">
+            <a href="" class="icons-social-networks">
+              <svg class="svg-icons" width="16" height="16">
+                <use href="./images/instagram .jpg"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icons-conteiner">
+            <a href="" class="icons-social-networks">
+              <svg class="svg-icons" width="16" height="16">
+                <use href="./images/twitter .jpg"></use>
+              </svg>
+            </a>
+          </li>
+             <li class="icons-conteiner">
+                <a href="" class="icons-social-networks">
+                    <svg class="svg-icons" width="16" height="16">
+                       <use href="./images/facebook .jpg"></use>
+                         </svg>
+                       </a>
+                    </li>
+                    <li class="icons-conteiner">
+                        <a href="" class="icons-social-networks">
+                            <svg class="svg-icons" width="16" height="16">
+                             <use href="./images/linkedin .jpg"></use>
+                          </svg>
+                      </a>
+                     </li>
+                    </ul>
+                </div>
+            </li>
+        </div>
+      </li>
+      <li class="our-team-list">
+        <img src="./images/person3.jpg" alt="Camila Garcia — Marketing" width="264" height="260">
+         <div class="text-container-team">
+        <h3 class="our-team-list-name">Camila Garcia</h3>
+        <p class="our-team-list-description">Marketing</p>
+        <ul class="items-social-networks">
+        <li class="icons-conteiner">
+          <a href="" class="icons-social-networks">
+              <svg class="svg-icons" width="16" height="16">
+                <use href="./images/instagram .jpg"></use>
+            </svg>
+          </a>
+       </li>
+        <li class="icons-conteiner">
+          <a href="" class="icons-social-networks">
+            <svg class="svg-icons" width="16" height="16">
+             <use href="./images/twitter .jpg"></use>
+          </svg>
+        </a>
+      </li>
+       <li class="icons-conteiner">
+        <a href="" class="icons-social-networks">
+          <svg class="svg-icons" width="16" height="16">
+          <use href="./images/facebook .jpg"></use>
+        </svg>
+      </a>
+    </li>
+   <li class="icons-conteiner">
+     <a href="" class="icons-social-networks">
+       <svg class="svg-icons" width="16" height="16">
+         <use href="./images/linkedin .jpg"></use>
+       </svg>
+      </a>
+    </li>
+   </ul>
+  </div>
+      </li>
+      <li class="our-team-list">
+        <img src="./images/person4.jpg" alt="Daniel Wilson — UI Designer" width="264" height="260">
+         <div class="text-container-team">
+        <h3 class="our-team-list-name">Daniel Wilson</h3>
+        <p class="our-team-list-description">UI Designer</p>
+        <ul class="icons-social-networks">
+          <li class="icons-conteiner">
+          <a href="" class="icons-social-networks">
+            <svg class="svg-icons" width="16" height="16">
+              <use href="./images/instagram .jpg"></use>
+          </svg>
+        </a>
+      </li>
+     <li class="icons-conteiner">
+      <a href="" class="icons-social-networks">
+        <svg class="svg-icons" width="16" height="16">
+          <use href="./images/twitter .jpg"></use>
+       </svg>
+      </a>
+     </li>
+    <li class="icons-conteiner">
+      <a href="" class="icons-social-networks">
+        <svg class="svg-icons" width="16" height="16">
+          <use href="./images/facebook .jpg"></use>
+        </svg>
+       </a>
+      </li>
+      <li class="icons-conteiner">
+        <a href="" class="icons-social-networks">
+            <svg class="svg-icons" width="16" height="16">
+              <use href="./images/linkedin .jpg"></use>
+            </svg>
+          </a>
+       </li>
+      </ul>
     </div>
   </section>
 
   <!-- PORTFOLIO -->
-  <section class="portfolio">
+  <section class="page-portfolio section">
     <div class="container">
     <h2 class="section-title">Our Portfolio</h2>
-    <ul class="portfolio-list">
-      <li class="project">
-        <img class="project-photo" src="./images/prj1.jpg" alt="Banking App interface" width="360" height="300">
-        <div class="project-info">
-          <h3 class="card-title">Banking App</h3>
-          <p class="card-text">App</p>
+    <ul class="card-set-portfolio">
+      <li class="card-set-portfolio-item">
+        <div class="img-transform">
+        <img src="./images/prj1.jpg" alt="Banking App interface" width="360" height="300">
+         <p class="text-overlay">
+          14 Stylish and User-Friendly App Design Concepts · Task
+          Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+          · Cloud Storage App
+         </p>
+        </div>
+        <div class="text-container">
+          <h3 class="portfolio-list">Banking App</h3>
+          <p class="portfolio-descrsption">App</p>
         </div>
       </li>
 
-      <li class="project">
-        <img class="project-photo" src="./images/prj2.jpg" alt="Cashless Payment flow" width="360" height="300">
-        <div class="project-info">
-          <h3 class="card-title">Cashless Payment</h3>
-          <p class="card-text">Marketing</p>
+      <li class="card-set-portfolio-item">
+        <div class="img-transform">
+        <img src="./images/prj2.jpg" alt="Cashless Payment flow" width="360" height="300">
+        <p class="text-overlay">
+         14 Stylish and User-Friendly App Design Concepts · Task
+         Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+         · Cloud Storage App
+          </p>
+        </div>
+        <div class="text-container">
+          <h3 class="portfolio-list">Cashless Payment</h3>
+          <p class="portfolio-descrsption">Marketing</p>
         </div>
       </li>
 
-      <li class="project">
-        <img class="project-photo" src="./images/prj3.jpg" alt="Meditation App screens" width="360" height="300">
-        <div class="project-info">
-          <h3 class="card-title">Meditation App</h3>
-          <p class="card-text">App</p>
+      <li class="card-set-portfolio-item">
+        <div class="img-transform">
+        <img src="./images/prj3.jpg" alt="Meditation App screens" width="360" height="300">
+          <p class="text-overlay">
+            14 Stylish and User-Friendly App Design Concepts · Task
+            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+            · Cloud Storage App
+          </p>
+        </div>
+        <div class="text-container">
+          <h3 class="portfolio-list">Meditation App</h3>
+          <p class="portfolio-descrsption">App</p>
         </div>
       </li>
 
-      <li class="project">
-        <img class="project-photo" src="./images/prj4.jpg" alt="Taxi Service booking" width="360" height="300">
-         <div class="project-info"> 
-          <h3 class="card-title">Taxi Service</h3>
-          <p class="card-text">Marketing</p>
+      <li class="card-set-portfolio-item">
+        <div class="img-transform">
+        <img src="./images/prj4.jpg" alt="Taxi Service booking" width="360" height="300">
+            <p class="text-overlay">
+            14 Stylish and User-Friendly App Design Concepts · Task
+             Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+            · Cloud Storage App
+          </p>
+        </div>
+
+         <div class="text-container"> 
+          <h3 class="portfolio-list">Taxi Service</h3>
+          <p class="portfolio-descrsption">Marketing</p>
          </div>
          </li>
 
-      <li class="project">
-        <img class="project-photo" src="./images/prj5.jpg" alt="Screen Illustrations set" width="360">
-        <div class="project-info">
-          <h3 class="card-title">Screen Illustrations</h3>
-          <p class="card-text">Design</p>
+      <li class="card-set-portfolio-item">
+        <div class="img-transform">
+        <img src="./images/prj5.jpg" alt="Screen Illustrations set" width="360">
+             <p class="text-overlay">
+              14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App
+            </p>
+        </div>
+      </li>
+       <div class="text-container">
+          <h3 class="portfolio-list">Screen Illustrations</h3>
+          <p class="portfolio-descrsption">Design</p>
         </div>
       </li>
 
-      <li class="project">
-        <img class="project-photo" src="./images/prj6.jpg" alt="Online Courses platform" width="360" >
-        <div class="project-info">
-          <h3 class="card-title">Online Courses</h3>
-          <p class="card-text">Marketing</p>
+      <li class="card-set-portfolio-item">
+        <div class="img-transform">
+        <img src="./images/prj6.jpg" alt="Online Courses platform" width="360" height="300">
+              <p class="text-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+        <div class="text-container">
+          <h3 class="portfolio-list">Online Courses</h3>
+          <p class="portfolio-descrsption">Marketing</p>
         </div>
        </li>
 
@@ -170,16 +353,51 @@
   </section>
 </main>
 
-<footer class="page-footer">
-  <div class="container">
-    <a class="footer-logo" href="./index.html">Web
-      <span class="footer-accent">Studio</span>
-    </a>
-    <p class="footer-text">
-      Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.
-    </p>
-  </div>
-</footer>
-
+   <footer class="page-footer">
+      <div class="container container-footer">
+        <div class="footer-text-container">
+          <a class="logo-container-footer logo footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing &#x26; growth solutions.
+          </p>
+        </div>
+        <div class="social-media-conteiner">
+          <p class="social-footer-text">Social media</p>
+          <ul class="items-social-networks-footer">
+            <li class="icons-conteiner">
+              <a href="" class="icons-social-networks-footer">
+                <svg class="svg-icons" width="24" height="24">
+                  <use href="./images/instagram .jpg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-conteiner">
+              <a href="" class="icons-social-networks-footer">
+                <svg class="svg-icons" width="24" height="24">
+                  <use href="./images/twitter .jpg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-conteiner">
+              <a href="" class="icons-social-networks-footer">
+                <svg class="svg-icons" width="24" height="24">
+                  <use href="./images/facebook .jpg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-conteiner">
+              <a href="" class="icons-social-networks-footer">
+                <svg class="svg-icons" width="24" height="24">
+                  <use href="./images/linkedin .jpg"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
