--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
       <li class="card-set-portfolio-item">
         <div class="img-transform">
-        <img src="./images/prj5.jpg" alt="Screen Illustrations set" width="360">
+        <img src="./images/prj5.jpg" alt="Screen Illustrations set" width="360" height="300">
              <p class="text-overlay">
               14 Stylish and User-Friendly App Design Concepts · Task
               Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
