--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <li class="card-set-item">
         <div class="advanteges-list-icons-conteiner">
           <svg class="" width="64" height="64">
-            <use href="images/Icon 1.jpg"></use>
+            <use href="./images/icon-antenna.svg"></use>
           </svg>
         </div>
         <h3 class="advanteges-list">Strategy</h3>
@@ -66,7 +66,7 @@
       <li class="card-set-item">
         <div class="advanteges-list-description">
           <svg class="64" width="64" height="64">
-            <use href="./images/Icon 2.jpg"></use>
+            <use href="./images/icon-clock.svg"></use>
           </svg>
         </div>
         <h3 class="advanteges-list">Punctuality</h3>
@@ -75,7 +75,7 @@
       <li class="card-set-item">
         <div class="advanteges-list-icons-conteiner">
           <svg class="" width="64" height="64">
-            <use href="./images/Icon 3.jpg"></use>
+            <use href="./images/icon-diagram.svg"></use>
           </svg>
         </div>
         <h3 class="advanteges-list">Diligence</h3>
@@ -84,7 +84,7 @@
       <li class="features-item">
         <div class="advanteges-list-icons-conteiner">
           <svg class="" width="64" height="64">
-            <use href="./images/Icon 4.jpg"></use>
+            <use href="./images/icon-astronaut.svg"></use>
           </svg>
         </div>
         <h3 class="advanteges-list">Technologies</h3>
@@ -109,7 +109,7 @@
         <li class="icons-conteiner">
           <a href="" class="icons-social-networks">
              <svg class="svg-icons" width="16" height="16">
-              <use href="./images/instagram .jpg"></use>
+              <use href="./images/icon-instagram.svg"></use>
              </svg>
           </a>
         </li>
@@ -117,21 +117,21 @@
       <li class="icons-conteiner">
         <a href="" class="icons-social-networks">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/twitter .jpg"></use>
+              <use href="./images/icon-twitter.svg"></use>
             </svg>
         </a>
       </li>
       <li class="icons-conteiner">
          <a href="" class="icons-social-networks">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/facebook .jpg"></use>
+              <use href="./images/icon-facebook.svg"></use>
             </svg>
          </a>
       </li>
       <li class="icons-conteiner">
         <a href="" class="icons-social-networks">
           <svg class="svg-icons" width="16" height="16">
-            <use href="./images/linkedin .jpg"></use>
+            <use href="./images/icon-linkedin.svg"></use>
           </svg>
         </a>
       </li>
@@ -147,28 +147,28 @@
           <li class="icons-conteiner">
             <a href="" class="icons-social-networks">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/instagram .jpg"></use>
+                <use href="./images/icon-instagram.svg"></use>
               </svg>
             </a>
           </li>
           <li class="icons-conteiner">
             <a href="" class="icons-social-networks">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/twitter .jpg"></use>
+                <use href="./images/icon-twitter.svg"></use>
               </svg>
             </a>
           </li>
              <li class="icons-conteiner">
                 <a href="" class="icons-social-networks">
                     <svg class="svg-icons" width="16" height="16">
-                       <use href="./images/facebook .jpg"></use>
+                       <use href="./images/icon-facebook.svg"></use>
                          </svg>
                        </a>
                     </li>
                     <li class="icons-conteiner">
                         <a href="" class="icons-social-networks">
                             <svg class="svg-icons" width="16" height="16">
-                             <use href="./images/linkedin .jpg"></use>
+                             <use href="./images/icon-linkedin.svg"></use>
                           </svg>
                       </a>
                      </li>
@@ -186,28 +186,28 @@
         <li class="icons-conteiner">
           <a href="" class="icons-social-networks">
               <svg class="svg-icons" width="16" height="16">
-                <use href="./images/instagram .jpg"></use>
+                <use href="./images/icon-instagram.svg"></use>
             </svg>
           </a>
        </li>
         <li class="icons-conteiner">
           <a href="" class="icons-social-networks">
             <svg class="svg-icons" width="16" height="16">
-             <use href="./images/twitter .jpg"></use>
+             <use href="./images/icon-twitter.svg"></use>
           </svg>
         </a>
       </li>
        <li class="icons-conteiner">
         <a href="" class="icons-social-networks">
           <svg class="svg-icons" width="16" height="16">
-          <use href="./images/facebook .jpg"></use>
+          <use href="./images/icon-facebook.svg"></use>
         </svg>
       </a>
     </li>
    <li class="icons-conteiner">
      <a href="" class="icons-social-networks">
        <svg class="svg-icons" width="16" height="16">
-         <use href="./images/linkedin .jpg"></use>
+         <use href="./images/icon-linkedin.svg"></use>
        </svg>
       </a>
     </li>
@@ -223,28 +223,28 @@
           <li class="icons-conteiner">
           <a href="" class="icons-social-networks">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/instagram .jpg"></use>
+              <use href="./images/icon-instagram.svg"></use>
           </svg>
         </a>
       </li>
      <li class="icons-conteiner">
       <a href="" class="icons-social-networks">
         <svg class="svg-icons" width="16" height="16">
-          <use href="./images/twitter .jpg"></use>
+          <use href="./images/icon-twitter.svg"></use>
        </svg>
       </a>
      </li>
     <li class="icons-conteiner">
       <a href="" class="icons-social-networks">
         <svg class="svg-icons" width="16" height="16">
-          <use href="./images/facebook .jpg"></use>
+          <use href="./images/icon-facebook.svg"></use>
         </svg>
        </a>
       </li>
       <li class="icons-conteiner">
         <a href="" class="icons-social-networks">
             <svg class="svg-icons" width="16" height="16">
-              <use href="./images/linkedin .jpg"></use>
+              <use href="./images/icon-linkedin.svg"></use>
             </svg>
           </a>
        </li>
